# pynetdesign

./: .gitignore  .zenodo.json  LICENSE  README.md  environment-dev.yml  environment.yml  install.bat  pyproject.toml  pytest.ini  uninstall.bat
data/homo/test_02/: TMPL_net_geometryA.txt  TMPL_velocity_model.txt
data/homo/test_03/: TMPL_net_geometryA.txt
data/homo/test_04/: TMPL_net_geometryA.txt  TMPL_net_geometryB.txt  TMPL_net_geometryC.txt  TMPL_velocity_model.txt
data/homo/test_05/: TMPL_net_geometry_Inclined.txt
data/homo/test_06/: TMPL_net_geometry_DoubleInclined.txt
data/homo/test_07/: TMPL_net_geometry_Noise_Constant.txt
data/homo/test_09/: TMPL_net_geometry_Single.txt
data/homo/test_10/: TMPL_net_geometry_Noise_Decreasing.txt
data/stations/: global_geometry.txt  local_geometry.txt
examples/: 01_1_ms_homo_test_1.py  02_1_ms_homo_test_2.py  03_1_ms_homo_test_3.py  04_1_ms_homo_test_4.py  05_1_ms_homo_test_5.py  06_1_ms_homo_test_6.py  07_1_ms_homo_test_7.py  08_1_ms_homo_test_8.py  09_1_ms_homo_test_9.py  10_1_ms_homo_test_10.py  README.txt
pynetdesign/: __init__.py
pynetdesign/modelling/: __init__.py  classes.py  core.py  homo.py  io.py  utils.py
pynetdesign/visualization/: __init__.py  geometry.py  sensitivity.py  utils.py
pytests/: test_read_geometry.py
